juniper-from-schema/tests/compile_fail/uppercase_uuid.stderr
error: proc macro panicked
  --> tests/compile_fail/uppercase_uuid.rs:6:1
   |
6  | / juniper_from_schema::graphql_schema! {
7  | |     schema {
8  | |         query: Query
9  | |     }
...  |
15 | |     scalar UUID
16 | | }
   | |_^
   |
   = help: message:

           error: The UUID must be named `Uuid`
            --> schema:2:49
             |
           2 |    { uuid : UUID! @ juniper(ownership : "owned") } scalar UUID
             |                                                    ^

           This is to be consistent with the naming the "uuid" crate

           aborting due to previous error

error[E0405]: cannot find trait `QueryFields` in this scope
  --> tests/compile_fail/uppercase_uuid.rs:20:6
   |
20 | impl QueryFields for Query {
   |      ^^^^^^^^^^^ not found in this scope
